@@ -1,7 +1,3 @@
-/*
- * This file was generated by the Gradle 'init' task.
- */
-
 plugins {
     id 'java-library'
     id 'maven-publish'
@@ -9,19 +5,7 @@ plugins {
 
 repositories {
     mavenLocal()
-    maven {
-        url = uri('https://repo.maven.apache.org/maven2/')
-    }
-}
-
-configurations {
-    ext.addPatchArgument = { String module_name ->
-        return ['--patch-module', "$module_name=${tasks.compileJava.destinationDirectory.asFile.get().path}"]
-    }
-
-    ext.addOpensArgument = { String base_name, String module_name ->
-        return ['--add-opens', "$base_name/$module_name=ALL-UNNAMED"]
-    }
+    mavenCentral()
 }
 
 group = 'tv.isshoni.araragi'
